--- a/whalas.css
+++ b/whalas.css
@@ -1,55 +1,50 @@
 body {
-    font-family: questrial;
-    background-color: #EFF0F5;
-    margin: 0;
-    padding: 0;
+  font-family: 'Questrial', sans-serif;
 }
 
-/* Estilos generales */
 .container {
   display: flex;
-  flex-direction: column; /* Cambiar a columna para móviles */
-  align-items: center; /* Centrar los elementos */
-  padding: 20px; /* Reducir padding en pantallas pequeñas */
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
 }
 
-.product-info, .product-slider {
-  width: 100%; /* Ancho completo para móviles */
-  padding: 20px; /* Reducir padding para móviles */
-  margin: 0; /* Quitar margen para móviles */
+.product-info {
+  width: 50%;
+  padding: 20px;
 }
 
 .product-slider {
   position: relative;
-  height: auto; /* Ajustar altura automáticamente */
-  margin-bottom: 20px; /* Reducir margen inferior para móviles */
+  width: 500px;
+  height: 500px;
 }
 
 .product-image {
   width: 100%;
-  height: auto; /* Ajustar altura automáticamente */
+  height: 100%;
   overflow: hidden;
-  border-radius: 15px; /* Ajustar radio del borde para móviles */
+  border-radius: 25px;
 }
 
 .product-image img {
   width: 100%;
-  height: auto; /* Ajustar altura automáticamente */
+  height: 100%;
   object-fit: cover;
   transition: transform 0.5s ease;
 }
 
 .product-images {
-  position: relative;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
   display: flex;
-  justify-content: center; /* Centrar las miniaturas */
   gap: 10px;
-  margin-top: 10px; /* Añadir margen superior para espacio */
 }
 
 .product-thumb {
-  width: 80px; /* Reducir tamaño para móviles */
-  height: 80px; /* Reducir tamaño para móviles */
+  width: 80px;
+  height: 80px;
   border-radius: 10px;
   cursor: pointer;
   opacity: 0.6;
@@ -61,30 +56,23 @@ body {
 }
 
 .product-title {
-  font-size: 2em; /* Reducir tamaño de fuente para móviles */
+  font-size: 1.5em;
   font-weight: bold;
-  margin-top: 20px;
-  text-align: center; /* Centrar el texto */
 }
 
 .product-price {
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: #333;
-  margin-top: 20px; /* Reducir margen superior para móviles */
-  text-align: center; /* Centrar el texto */
 }
 
 .product-size {
-  margin-top: 20px; /* Reducir margen superior */
-  text-align: center; /* Centrar el texto */
+  margin-top: 10px;
 }
 
 #size-buttons {
   display: flex;
-  flex-wrap: wrap; /* Permitir envolvimiento de botones */
-  justify-content: center; /* Centrar los botones */
   gap: 10px;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .size-button {
@@ -99,59 +87,41 @@ body {
 
 .size-button:hover,
 .size-button.active {
-  background-color: #000;
-}
-
-.product-add-to-cart {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centrar los elementos */
-  gap: 20px;
-  margin-top: 20px; /* Reducir margen superior */
+  background-color: #EFF0F5;
+  color: #0E1B4D;
 }
 
 .product-quantity {
-  display: flex;
-  flex-direction: row; /* Cambiar a fila para móviles */
-  align-items: center; /* Centrar los elementos verticalmente */
-  gap: 10px;
-  margin-top: 20px; /* Reducir margen superior */
+  margin-top: 20px;
 }
 
-.product-quantity label {
-  font-size: 1em;
+#quantity-buttons {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
 }
 
 .quantity-button {
-  position: relative;
-  background-color: #0E1B4D;
+  background-color: #eee;
   border: none;
-  padding: 10px 20px;
-  border-radius: 25px;
+  padding: 5px 10px;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  color: #EFF0F5;
+  border-radius: 50%;
 }
 
-.quantity {
-  font-size: 1.2em;
-  font-weight: bold;
+.quantity-button.minus {
+  border-radius: 50% 0 0 50%;
 }
 
-.plus, .minus {
-  font-size: 1.5em;
-  position: absolute;
+.quantity-button.plus {
+  border-radius: 0 50% 50% 0;
 }
 
-.minus {
-  left: 10px;
-}
-
-.plus {
-  right: 10px;
+.product-quantity input {
+  width: 40px;
+  text-align: center;
+  border: none;
+  outline: none;
 }
 
 .product-button {
@@ -162,8 +132,8 @@ body {
   border-radius: 25px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 10px;
 }
-
 .product-button:hover {
   background-color: #000000;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
@@ -171,116 +141,89 @@ body {
 }
 
 .accordion {
-  width: 100%;
-  max-width: 600px;
-  margin-top: 20px;
-}
-
-.accordion-item {
-  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .accordion-button {
-  background-color: #0E1B4D;
-  color: #EFF0F5;
-  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f8f8f8;
+  color: #333;
+  padding: 15px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   width: 100%;
+  text-align: left;
+  font-size: 1em;
 }
 
-.accordion-button:hover {
-  background-color: #000;
+.accordion-button img {
+  margin-right: 10px;
+  height: 20px;
+}
+
+.accordion-button::after {
+  content: '\02795'; /* Plus icon */
+  font-size: 1em;
+  color: #333;
+}
+
+.accordion-button.active::after {
+  content: '\2796'; /* Minus icon */
 }
 
 .accordion-content {
-  padding: 10px;
+  padding: 0 15px;
   border: 1px solid #ddd;
+  border-top: none;
   display: none;
-  text-align: center;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.3s ease-out;
+}
+
+.accordion-content p {
+  padding: 15px 0;
+  margin: 0;
 }
 
 .accordion-button.active + .accordion-content {
   display: block;
+  max-height: 1000px; /* A high value to ensure it expands */
+  transition: max-height 0.5s ease-in;
 }
 
-/* Nueva sección */
-.new-section, .new-section2 {
-  margin-top: 20px;
-  text-align: center;
-}
-
-.payment-icons {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 20px;
-}
-
-.payment-icons img {
-  width: 100px; /* Reducir tamaño para móviles */
-  height: auto; /* Ajustar altura automáticamente */
-}
-
-.new-section h2, .new-section2 h2 {
-  font-size: 1.8em; /* Reducir tamaño de fuente para móviles */
-  margin-bottom: 10px;
-}
-
-.new-section h3 {
-  font-size: 1.2em; /* Reducir tamaño de fuente para móviles */
-  margin-bottom: 20px;
-}
-
-.new-section p, .new-section2 p {
-  font-size: 1em;
-  margin-bottom: 20px;
-  line-height: 1.5;
-}
-
-.video-container, .video-container2 {
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-.video-container img, .video-container2 img {
-  width: 100%;
-  border-radius: 25px;
-}
-
-/* Estilos para la vista ampliada */
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1000;
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 60px; 
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.9); 
 }
 
 .modal-content {
-  margin: 10% auto;
+  margin: auto;
   display: block;
   width: 80%;
   max-width: 700px;
 }
 
-.modal-content img {
-  width: 100%;
-}
-
 .close {
   position: absolute;
-  top: 20px;
+  top: 15px;
   right: 35px;
-  color: #fff;
+  color: #f1f1f1;
   font-size: 40px;
   font-weight: bold;
-  cursor: pointer;
+  transition: 0.3s;
 }
 
 .close:hover,
@@ -290,469 +233,16 @@ body {
   cursor: pointer;
 }
 
-/* Consultas de medios para pantallas más pequeñas */
-@media (max-width: 484px) {
+/* Responsive Styles */
+@media (max-width: 768px) {
   .container {
-      padding: 20px; /* Reducir padding en pantallas pequeñas */
-  }
-
-  .product-slider {
-      margin-bottom: 10px; /* Reducir margen inferior */
+    flex-direction: column;
+    align-items: center;
   }
 
   .product-info {
-      padding: 10px; /* Reducir padding */
-  }
-
-  .product-title {
-      font-size: 1.8em; /* Ajustar tamaño de fuente */
-  }
-
-  .product-price {
-      font-size: 1.2em; /* Ajustar tamaño de fuente */
-  }
-
-  .product-size {
-      margin-top: 20px; /* Reducir margen superior */
-  }
-
-  #size-buttons {
-      gap: 5px; /* Reducir espacio entre botones */
-  }
-
-  .size-button {
-      padding: 5px 10px; /* Reducir padding */
-  }
-
-  .product-quantity {
-      flex-direction: row; /* Mantener en fila */
-      gap: 5px; /* Reducir espacio entre elementos */
-  }
-
-  .quantity-button {
-      width: 60px; /* Ajustar ancho */
-  }
-
-  .product-button {
-      padding: 10px 15px; /* Reducir padding */
-      font-size: 0.9em; /* Reducir tamaño de fuente */
-  }
-
-  .accordion-button {
-      padding: 5px 10px; /* Reducir padding */
-  }
-
-  .new-section h2, .new-section2 h2 {
-      font-size: 1.5em; /* Ajustar tamaño de fuente */
-  }
-
-  .new-section h3 {
-      font-size: 1em; /* Ajustar tamaño de fuente */
-  }
-
-  .new-section p, .new-section2 p {
-      font-size: 0.8em; /* Reducir tamaño de fuente */
-  }
-
-  .payment-icons img {
-      width: 80px; /* Reducir ancho */
-  }
-}
-
-@media (max-width: 480px) {
-  .product-title {
-      font-size: 1.5em; /* Ajustar tamaño de fuente */
-  }
-
-  .product-price {
-      font-size: 1em; /* Ajustar tamaño de fuente */
-  }
-
-  .product-size {
-      margin-top: 15px; /* Reducir margen superior */
-  }
-
-  #size-buttons {
-      flex-direction: column; /* Cambiar a columna */
-  }
-
-  .size-button {
-      width: 100%; /* Botones ocupan el ancho completo */
-  }
-
-  .product-quantity {
-      flex-direction: column; /* Cambiar a columna */
-      gap: 10px; /* Añadir espacio */
-  }
-
-  .quantity-button {
-      width: 100px; /* Ajustar ancho */
-  }
-
-  .product-button {
-      padding: 10px; /* Reducir padding */
-  }
-
-  .accordion-content {
-      text-align: center; /* Centrar contenido */
-  }
-
-  .new-section h2, .new-section2 h2 {
-      font-size: 1.2em; /* Ajustar tamaño de fuente */
-  }
-
-  .new-section h3 {
-      font-size: 0.9em; /* Ajustar tamaño de fuente */
-  }
-
-  .new-section p, .new-section2 p {
-      font-size: 0.7em; /* Reducir tamaño de fuente */
-  }
-
-  .payment-icons img {
-      width: 60px; /* Reducir ancho */
-  }
-}
-
-/* Sección del slider */
-.slider, .slider2, .slider3 {
-    width: 100vw; /* Ajusta el ancho al 100% de la vista */
-    height: auto;
-    overflow: hidden;
-    background-color: #EFF0F5;
-  }
-  
-  .slide-track, .slide-track2, .slide-track3 {
-    display: flex;
-    animation: scroll 40s linear infinite;
-    width: calc(200px * 14);
-  }
-  
-  .slide, .slide2, .slide3 {
-    width: 200px;
-    flex-shrink: 0;
-  }
-  slide-text3, slide-text2, slide-text {
-    width: 100%;
-    color: #0E1B4D;
-    text-align: center; /* Añadido para centrar el texto */
-  }
-  @keyframes scroll {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(calc(-200px * 7));
-    }
-  }
-  
-  @media screen and (max-width: 480px) {
-    .slide, .slide2, .slide3 {
-        font-size: 1rem;
-    }
-  }
-  /* Barra de navegación */
-.navbar {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-  background-color: #0E1B4D;
-  color: #EFF0F5;
-}
-
-.navbar .logo img {
-  height: 80px;
-}
-
-.navbar .menu {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
-  border-radius: 2%;
-}
-
-.navbar .menu a {
-  color: #EFF0F5;
-  text-decoration: none;
-  font-size: 1rem;
-}
-
-.navbar .menu a:hover {
-  text-decoration: underline;
-}
-
-.search-cart-container {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.navbar .search-container {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-
-.navbar .search-container input[type="text"] {
-  padding: 5px;
-  border: none;
-  border-radius: 25px;
-  margin-right: 10px;
-  width: 0;
-  opacity: 0;
-  transition: width 0.3s ease, opacity 0.3s ease;
-  position: absolute;
-  right: 40px;
-}
-
-.navbar .search-container input[type="text"].active {
-  width: 200px;
-  opacity: 1;
-}
-
-.navbar .search-container img {
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-}
-
-.carrito {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-.carrito img {
-  width: 25px;
-  height: 25px;
-  color: #EFF0F5;
-}
-
-.carrito h2 {
-  margin-left: 10px;
-  font-size: 20px;
-  color: #EFF0F5;
-}
-
-/* Iconos del menú y cerrar menú */
-.menu-icon, .close-icon {
-  display: none;
-}
-
-/* Estilos del submenú */
-.submenu {
-  position: relative;
-}
-
-.submenu-content {
-  display: none;
-  position: absolute;
-  background-color: #0E1B4D;
-  min-width: 160px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.submenu-content a {
-  color: #EFF0F5;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.submenu-content a:hover {
-  background-color: #1A237E;
-}
-
-.submenu:hover .submenu-content {
-  display: block;
-}
-
-/* Ajustes para la versión móvil */
-@media screen and (max-width: 768px) {
-  .navbar {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .menu-icon {
-    display: block;
-    cursor: pointer;
-  }
-
-  .menu-icon img {
-    width: 30px;
-    height: 30px;
-  }
-
-  .logo {
-    display: flex;
-    justify-content: center;
-    flex: 1;
-    text-align: center;
-  }
-
-  .logo img {
-    margin: 0 auto;
-  }
-
-  .menu {
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    left: -250px;
-    background-color: #0E1B4D;
-    width: 250px;
-    height: 100%;
-    transition: left 0.3s ease;
-    z-index: 10;
-    padding-top: 20px;
-  }
-
-  .menu.active {
-    left: 0;
-  }
-
-  .close-icon {
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 20px;
-    cursor: pointer;
-  }
-
-  .close-icon img {
-    width: 25px;
-    height: 25px;
-  }
-
-  .search-container {
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .carrito {
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 10px;
-  }
-
-  .search-container input[type="text"] {
-    width: 150px;
-    opacity: 1;
-  }
-
-  /* Estilos para el submenú en versión móvil */
-  .submenu-content {
-    position: relative;
-    background-color: #0E1B4D;
-    width: 100%;
-  }
-
-  .submenu-content a {
-    padding: 12px;
-  }
-
-  .menu.active .submenu-content {
-    display: block;
-  }
-}
-  
-/*************************
-icon bar
-*************************/
-.icon-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    background-color: #EFF0F5;
-    color: #0E1B4D;
-}
-
-.icon-container {
-    text-align: center;
-}
-
-.icon-container img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 10px;
-}
-
-.icon-container p {
-    font-size: 1rem;
-    margin: 0;
-    font-weight: bold;
-}
-@media (max-width: 480px) {
-    .icon-bar {
-        flex-direction: column;
-    }
-
-    .icon-container img {
-        width: 60px;
-        height: 60px;
-    }
-
-    .icon-container p {
-        font-size: 1.2rem;
-    }
-}
-
-@media (max-width: 480px) {
-    .icon-container img {
-        width: 40px;
-        height: 40px;
-    }
-
-    .icon-container p {
-        font-size: 1rem;
-    }
-}
-/**************
-   FOOTER
-**************/
-.footer {
-  background-color: #0E1B4D;
-  padding: 20px;
-  text-align: center;
-}
-
-.footer-menu {
-  list-style-type: none;
-  padding: 0;
-}
-
-.footer-menu li {
-  display: inline;
-  margin: 0 15px;
-}
-
-.footer-menu a {
-  text-decoration: none;
-  color: #EFF0F5;
-}
-
-.payment-methods {
-  margin-top: 20px;
-}
-
-.footer-text {
-  margin-top: 20px;
-  font-size: 14px;
-  color: #EFF0F5;
-}
-
-/* Estilos responsive */
-@media screen and (max-width: 768px) {
-  .product-container {
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+    width: 80%;
+    padding: 10px;
   }
 
   .product-slider {
@@ -760,14 +250,55 @@ icon bar
     height: auto;
   }
 
-  .product-image,
-  .product-image img {
+  .product-image {
     height: auto;
   }
 
+  .product-title {
+    font-size: 1.2em;
+  }
+
+  .product-price {
+    font-size: 1em;
+  }
+
+  .size-button,
+  .product-button {
+    width: 100%;
+    text-align: center;
+  }
+
+  .quantity-button {
+    padding: 5px;
+  }
+
+  .product-quantity input {
+    width: 30px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 10px;
+  }
+
+  .product-info {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .product-slider {
+    width: 100%;
+    height: auto;
+  }
+
+  .product-image {
+    height: 300px;
+  }
+
   .product-images {
-    position: static;
-    margin-top: 10px;
+    bottom: 5px;
+    left: 5px;
   }
 
   .product-thumb {
@@ -775,45 +306,26 @@ icon bar
     height: 60px;
   }
 
-  .product-info {
-    align-items: center;
+  .product-title {
+    font-size: 1em;
+  }
+
+  .product-price {
+    font-size: 0.9em;
+  }
+
+  .size-button,
+  .product-button {
+    width: 100%;
     text-align: center;
+    padding: 8px 0;
   }
 
-  .product-info h2 {
-    font-size: 20px;
+  .quantity-button {
+    padding: 5px;
   }
 
-  .price-container {
-    gap: 5px;
-  }
-
-  .product-info .old-price,
-  .product-info .price {
-    font-size: 18px;
-  }
-
-  .product-info p {
-    text-align: center;
-  }
-
-  .add-to-cart {
-    padding: 10px 20px;
-  }
-
-  /* Estilos específicos para el footer en dispositivos móviles */
-  .footer-menu {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .footer-menu li {
-    display: block;
-    margin: 10px 0;
-  }
-
-  .footer-menu a {
-    text-align: left;
+  .product-quantity input {
+    width: 30px;
   }
 }
